--- a/public/index.html
+++ b/public/index.html
@@ -3,23 +3,44 @@
     <head>
         <meta charset="utf-8">
         <title>Alejandro's Pokedex</title>
-        <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.css">
+        <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+        <link rel="stylesheet" href="app/css/types.style.css">
+        <meta name="viewport" content="width=device-width, user-scalable=no">
     </head>
-    <body ng-app="pokedex" layout="row" ng-cloak>
+    <body ng-app="pokedex" ng-cloak>
 
-        <md-sidenav layout="column" class="sidenav1" md-is-locked-open='true'>
-            <md-toolbar class="md-medium-tall">
-                <div class="md-toolbar-tools">
-                    <span class="md-title">Alejandro's Pokedex</span>
-                </div>
-            </md-toolbar>
-            <md-content layout="column" flex>
-                <md-button href="#/pkm/new">New</md-button>
-                <md-button href="#/">List</md-button>
-                <md-button href="#/about">About</md-button>
-            </md-content>
-        </md-sidenav>
-
+        <md-toolbar class="md-hue-2">
+            <div class="md-toolbar-tools">
+                <span class="md-title">Alejandro's Pokedex</span>
+                <md-menu>
+                    <md-button class="md-icon-button" aria-label="Menu" ng-click="$mdMenu.open($event);">
+                        <md-icon>menu</md-icon>
+                    </md-button>
+                    <md-menu-content width="4">
+                        <md-menu-item>
+                            <md-button href="#/pkm/new">
+                                <md-icon md-menu-align-target>fiber_new</md-icon>
+                                New
+                            </md-button>
+                        </md-menu-item>
+                        <md-menu-item>
+                            <md-button href="#/list">
+                                <md-icon md-menu-align-target>list</md-icon>
+                                List
+                            </md-button>
+                        </md-menu-item>
+                        <md-menu-divider></md-menu-divider>
+                        <md-menu-item>
+                            <md-button href="#/about">
+                                <md-icon md-menu-align-target>announcement</md-icon>
+                                About
+                            </md-button>
+                        </md-menu-item>
+                    </md-menu-content>
+                </md-menu>
+            </div>
+        </md-toolbar>
         <md-content ng-controller="globalController" ng-init="init()" flex layout="column">
             <ng-view></ng-view>
         </md-content>
