--- a/example/public/index.html
+++ b/example/public/index.html
@@ -2,9 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>test</title>
+    <title></title>
   </head>
   <body>
-    Hi
+    Hello World!
   </body>
 </html>
